Fix overflow bug on bottom border

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -74,7 +74,7 @@ h1,h2,h3,h4,h5 {
 }
 
 .bus-route--container {
-  height: 736px;
+  height: 738px;
   overflow: auto;
 }
 
